Split Utils to Factory and Init, treat URLs as URLs